[package]
name = "prex_challenge"
version = "0.1.0"
edition = "2021"
authors = ["Gianfranco"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
